# bosmc

./: .gitignore  ADAM_vs_MCMC.ipynb  README.md  presentation.ipynb  pyproject.toml
_deprecated/: bo_pysmc.py  bo_smc.py  bo_trad.py
benchmarks/: api.py  plot.py  plot_seed_x.py
bosmc/: __init__.py  acq_fns.py  fit.py  models.py
bosmc/pysmc_port/: model.py
bosmc/smc/: __init__.py  api.py  nuts.py  nutsAR.py  rw.py  smc_kernel.py
data/notebook_plot_data/: ackley10_ADAM.pkl  ackley10_MCMC.pkl  branin2_ADAM.pkl  branin2_MCMC.pkl  hartmann4_ADAM.pkl  hartmann4_MCMC.pkl  hartmann6_ADAM.pkl  hartmann6_MCMC.pkl
poster/: plots_for_poster.ipynb
slurm/: run_test.sh  run_test_gpu.sh
tests/: smc_target.py  utils.py
tests/target_functions/: __init__.py  ackley.py  base.py  branin.py  hartmann.py  rosenbrock.py
