[project]
name = "bosmc"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Parry",email = "None"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"torch>=2.0.0",
"torchvision>=0.20",
"pyro-ppl>=1.9.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
